# python-grpc-service.archetype

./: .gitignore  README.md  archetype.rhai  archetype.yaml
content/base/{{ project-name }}/: .gitignore  README.md  pyproject.toml
content/base/{{ project-name }}/src/{{ project_name }}_server/: server.py
